syntax = "proto3";

service KeyValuer {
  rpc TrySetKeyValue (GrpcTrySetKeyValueRequest) returns (GrpcTrySetKeyValueResponse);
  rpc TryExtendKeyValue (GrpcTryExtendKeyValueRequest) returns (GrpcTryExtendKeyValueResponse);
  rpc TryDeleteKeyValue (GrpcTryDeleteKeyValueRequest) returns (GrpcTryDeleteKeyValueResponse);
  rpc TryGetKeyValue (GrpcTryGetKeyValueRequest) returns (GrpcTryGetKeyValueResponse);
  rpc TryExistsKeyValue (GrpcTryExistsKeyValueRequest) returns (GrpcTryExistsKeyValueResponse);
  rpc TryExecuteTransaction (GrpcTryExecuteTransactionRequest) returns (GrpcTryExecuteTransactionResponse);
  rpc TryAcquireExclusiveLock (GrpcTryAcquireExclusiveLockRequest) returns (GrpcTryAcquireExclusiveLockResponse);
  rpc TryReleaseExclusiveLock (GrpcTryReleaseExclusiveLockRequest) returns (GrpcTryReleaseExclusiveLockResponse);
  rpc TryPrepareMutations (GrpcTryPrepareMutationsRequest) returns (GrpcTryPrepareMutationsResponse);
  rpc TryCommitMutations (GrpcTryCommitMutationsRequest) returns (GrpcTryCommitMutationsResponse);
  rpc TryRollbackMutations (GrpcTryRollbackMutationsRequest) returns (GrpcTryRollbackMutationsResponse);
}

message GrpcTrySetKeyValueRequest {
  int64 TransactionIdPhysical = 1;
  uint32 TransactionIdCounter = 2;
  string Key = 3;
  optional bytes Value = 4;
  optional bytes CompareValue = 5;
  int64 CompareRevision = 6;
  GrpcKeyValueFlags Flags = 7;
  int32 ExpiresMs = 8;
  GrpcKeyValueDurability Durability = 9;
}

message GrpcTrySetKeyValueResponse {
  optional string ServedFrom = 1;
  GrpcKeyValueResponseType Type = 2;
  int64 Revision = 3;
}

message GrpcTryExtendKeyValueRequest {
  int64 TransactionIdPhysical = 1;
  uint32 TransactionIdCounter = 2;
  string Key = 3;
  int32 ExpiresMs = 4;
  GrpcKeyValueDurability Durability = 5;
}

message GrpcTryExtendKeyValueResponse {
  optional string ServedFrom = 1;
  GrpcKeyValueResponseType Type = 2;
  int64 Revision = 3;
}

message GrpcTryDeleteKeyValueRequest {
  int64 TransactionIdPhysical = 1;
  uint32 TransactionIdCounter = 2;
  string Key = 3;
  GrpcKeyValueDurability Durability = 4;
}

message GrpcTryDeleteKeyValueResponse {
  optional string ServedFrom = 1;
  GrpcKeyValueResponseType Type = 2;
  int64 Revision = 3;
}

message GrpcTryGetKeyValueRequest {
  int64 TransactionIdPhysical = 1;
  uint32 TransactionIdCounter = 2;
  string Key = 3;
  int64 Revision = 4;
  GrpcKeyValueDurability Durability = 5;
}

message GrpcTryGetKeyValueResponse {
  optional string ServedFrom = 1;
  GrpcKeyValueResponseType Type = 2;
  optional bytes Value = 3;
  int64 Revision = 4;
  int64 ExpiresPhysical = 5;
  uint32 ExpiresCounter = 6;
}

message GrpcTryExistsKeyValueRequest {
  int64 TransactionIdPhysical = 1;
  uint32 TransactionIdCounter = 2;
  string Key = 3;
  int64 Revision = 4;
  GrpcKeyValueDurability Durability = 5;
}

message GrpcTryExistsKeyValueResponse {
  optional string ServedFrom = 1;
  GrpcKeyValueResponseType Type = 2;
  int64 Revision = 3;
  int64 ExpiresPhysical = 4;
  uint32 ExpiresCounter = 5;
}

message GrpcTryExecuteTransactionRequest {
  optional string Hash = 1;
  bytes Script = 2;
  repeated GrpcKeyValueParameter Parameters = 3;
}

message GrpcKeyValueParameter {
  string Key = 1;
  optional string Value = 2;
}

message GrpcTryExecuteTransactionResponse {
  optional string ServedFrom = 1;
  GrpcKeyValueResponseType Type = 2;
  optional bytes Value = 3;
  int64 Revision = 4;
  int64 ExpiresPhysical = 5;
  uint32 ExpiresCounter = 6;
  optional string Reason = 7;
}

message GrpcTryAcquireExclusiveLockRequest {
  int64 TransactionIdPhysical = 1;
  uint32 TransactionIdCounter = 2;
  string Key = 3;
  int32 ExpiresMs = 4;
  GrpcKeyValueDurability Durability = 5;
}

message GrpcTryAcquireExclusiveLockResponse {
  optional string ServedFrom = 1;
  GrpcKeyValueResponseType Type = 2;
}

message GrpcTryReleaseExclusiveLockRequest {
  int64 TransactionIdPhysical = 1;
  uint32 TransactionIdCounter = 2;
  string Key = 3;
  GrpcKeyValueDurability Durability = 4;
}

message GrpcTryReleaseExclusiveLockResponse {
  optional string ServedFrom = 1;
  GrpcKeyValueResponseType Type = 2;
}

message GrpcTryPrepareMutationsRequest {
  int64 TransactionIdPhysical = 1;
  uint32 TransactionIdCounter = 2;
  string Key = 3;
  GrpcKeyValueDurability Durability = 4;
}

message GrpcTryPrepareMutationsResponse {
  optional string ServedFrom = 1;
  GrpcKeyValueResponseType Type = 2;
  int64 ProposalTicketPhysical = 3;
  uint32 ProposalTicketCounter = 4;
}

message GrpcTryCommitMutationsRequest {
  int64 TransactionIdPhysical = 1;
  uint32 TransactionIdCounter = 2;
  string Key = 3;
  int64 ProposalTicketPhysical = 4;
  uint32 ProposalTicketCounter = 5;
  GrpcKeyValueDurability Durability = 6;
}

message GrpcTryCommitMutationsResponse {
  optional string ServedFrom = 1;
  GrpcKeyValueResponseType Type = 2;
  int64 ProposalIndex = 3;
}

message GrpcTryRollbackMutationsRequest {
  int64 TransactionIdPhysical = 1;
  uint32 TransactionIdCounter = 2;
  string Key = 3;
  int64 ProposalTicketPhysical = 4;
  uint32 ProposalTicketCounter = 5;
  GrpcKeyValueDurability Durability = 6;
}

message GrpcTryRollbackMutationsResponse {
  optional string ServedFrom = 1;
  GrpcKeyValueResponseType Type = 2;
  int64 ProposalIndex = 3;
}

enum GrpcKeyValueFlags {
  NONE = 0;
  SET = 1;
  SET_IF_EXISTS = 2;
  SET_IF_NOT_EXISTS = 3;
  SET_IF_EQUAL_TO_VALUE = 4;
  SET_IF_EQUAL_TO_REVISION = 5;
}

enum GrpcKeyValueResponseType {
  TYPE_SET = 0;
  TYPE_NOTSET = 1;
  TYPE_EXTENDED = 2;
  TYPE_GOT = 3;
  TYPE_DELETED = 4;
  TYPE_LOCKED = 5;
  TYPE_UNLOCKED = 6;
  TYPE_PROPOSED = 7;
  TYPE_COMMITTED = 8;
  TYPE_ROLLEDBACK = 9;
  TYPE_EXISTS = 10;
  TYPE_ERRORED = 99;
  TYPE_INVALID_INPUT = 100;
  TYPE_MUST_RETRY = 101;
  TYPE_ABORTED = 102;
  TYPE_DOES_NOT_EXIST = 103;
  TYPE_ALREADY_LOCKED = 104;
}

enum GrpcKeyValueDurability {
  EPHEMERAL = 0;
  PERSISTENT = 1;
}